Fix features style on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -295,6 +295,14 @@ html, body {
 }
 
 @media (max-width: 768px) {
+    .section-features {
+        text-align: center;
+    }
+
+    .features__description {
+        padding: 0 4rem;
+    }
+
     .features__cards {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -302,12 +310,28 @@ html, body {
 }
 
 @media (max-width: 480px) {
+    .features__title {
+        font-size: 1.8rem; 
+        padding: 0 1.5rem;
+        line-height: 1.15;
+    }
+
+    .features__description {
+        font-size: 90%;
+        margin-bottom: 3rem;
+    }
+
+    .features__description {
+        padding: 0 1.5rem;
+    }
+
     .features__cards {
         grid-template-columns: 1fr;
-        text-align: center;
+        grid-gap: 2rem;
+
     }
 }
-// TODO: more padding for mobile!!
+
 .card__title {
     font-size: 1.3rem;
 }
